--- a/er-core-staff-scheduler/app/views/scheduler/create_login.html.haml
+++ b/er-core-staff-scheduler/app/views/scheduler/create_login.html.haml
@@ -14,4 +14,7 @@
   = label :user, :password, 'Password'
   = text_field :user, 'password'
 
+  = label :user, :fte, 'fte'
+  = text_field :user, 'fte'
+  
   = submit_tag 'Save'
