--- a/er-core-staff-scheduler/app/views/users/new.html.haml
+++ b/er-core-staff-scheduler/app/views/users/new.html.haml
@@ -15,11 +15,11 @@
   %p
     = f.label :usertype
     %br
-    = f.select :usertype, ['Core', 'Admin']
+    = f.select :usertype, ['Administrator', 'Core Doctor', 'Night Doctor']
   %p
     = f.label :fte
     %br
-    = f.text_field :fte
+    = f.select :fte, ['0.1', '0.2', '0.25', '0.4', '0.5', '0.6', '0.75', '0.8', '1.0']
   %p
     = f.label :username
     %br
