linked VA ER Scheduler with shift_path and allows for only one login

--- a/er-core-staff-scheduler/app/views/home/index.html.haml
+++ b/er-core-staff-scheduler/app/views/home/index.html.haml
@@ -19,10 +19,10 @@
 	%div#sidebar-wrapper
 		%ul.sidebar-nav
 			%li.sidebar-brand
-				%a VA ER Scheduler
+				%a= link_to 'VA ER Scheduler', shifts_path
 			%li 
 				%a Calendar
-			- if @user.usertype == 'Admin'
+			- if @user.usertype == 'Administrator'
 				%li 
 					%a Set Availability
 
