--- a/er-core-staff-scheduler/app/views/home/index.html.haml
+++ b/er-core-staff-scheduler/app/views/home/index.html.haml
@@ -9,10 +9,10 @@
 		%div.collapse.navbar-collapse
 			%ul.nav.navbar-nav.navbar-right
 				%li
-					%button.btn.btn-default.btn-lg.btn-link{title: "Account Settings", type: "button"}
+					%a.button.btn.btn-default.btn-lg.btn-link{title: "Account Settings", type: "button", href: "/settings"}
 						%span.glyphicon.glyphicon-cog
 				%li
-					%button.btn.btn-default.btn-lg.btn-link{title: "Log Out", type: "button"}
+					%a.button.btn.btn-default.btn-lg.btn-link{title: "Log Out", type: "button", href: "/logout"}
 						%span.glyphicon.glyphicon-off
 			
 %div#wrapper
