--- a/er-core-staff-scheduler/app/views/shifts/index.html.haml
+++ b/er-core-staff-scheduler/app/views/shifts/index.html.haml
@@ -19,6 +19,6 @@
 					%td= shift.users
 					%td= shift.owner
 					%td= shift.open	
-					%td= link_to 'details', shift
+					%td= link_to 'edit', edit_shift_path(shift)
 
 = link_to 'Add new shift', new_shift_path
