--- a/er-core-staff-scheduler/app/views/shifts/new.html.haml
+++ b/er-core-staff-scheduler/app/views/shifts/new.html.haml
@@ -8,5 +8,5 @@
   = label :shift, :shiftend, 'ShiftEnd'
   = datetime_select :shift, :shiftend
 
-  = submit_tag 'Save'
+  = submit_tag 'Save', :id => "save_submit"
 
