--- a/app/views/shifts/index.html.haml
+++ b/app/views/shifts/index.html.haml
@@ -18,7 +18,7 @@
 					%td= shift.shiftend
 					%td= shift.users
 					%td= shift.owner
-					%td= shift.open	
+					-#%td= shift.open	
 					%td= link_to 'edit', edit_shift_path(shift)
 
 = link_to 'Add new shift', new_shift_path
