fixed new_shift view to match path

--- a/app/views/shifts/new.html.haml
+++ b/app/views/shifts/new.html.haml
@@ -1,6 +1,6 @@
 %h1 Add a shift
 
-= form_tag shifts_path do
+= form_tag new_shift_path do
 
   = label :shift, :shiftstart, 'ShiftStart'
   = datetime_select :shift, :shiftstart
