--- a/app/views/shifts/edit.html.haml
+++ b/app/views/shifts/edit.html.haml
@@ -1,12 +1,12 @@
 %h1 Edit Existing Shift
 
-= form_tag shifts_path, :method => :put do
+= form_tag shifts_path do
 
   = label :shift, :shiftstart, 'Start'
-  = text_field :shift, 'start'
+  = datetime_select :shift, :shiftstart
 
   = label :shift, :shiftend, 'End'
-  = text_field :shift, 'start'
+  = datetime_select :shift, :shiftend
 
   = submit_tag 'Update Shift'
   = link_to 'Back to all shifts', shifts_path
