--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -9,9 +9,13 @@
           %li= message
 
   %p
-    = f.label :name
+    = f.label :first_name
     %br
-    = f.text_field :name
+    = f.text_field :first_name
+  %p
+    = f.label :last_name
+    %br
+    = f.text_field :last_name
   %p
     = f.label :usertype
     %br
