Added Forgot Password

--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -17,6 +17,10 @@
     %br
     = f.text_field :last_name
   %p
+    = f.label :email
+    %br
+    = f.text_field :email
+  %p
     = f.label :usertype
     %br
     = f.select :usertype, ['Administrator', 'Core Doctor', 'Night Doctor']
