--- a/app/views/password_resets/new.html.haml
+++ b/app/views/password_resets/new.html.haml
@@ -1,5 +1,7 @@
+%p#notice= notice
+%p#alert= alert
 = form_tag password_resets_path, :method => :post do
   .field
-    = label_tag :username
-    = text_field_tag :username, params[:username]
+    = label_tag :email
+    = text_field_tag :email, params[:email]
   .actions= submit_tag "Reset Password"
