added very basic cucumber for login & forgot password

--- a/app/views/password_resets/new.html.haml
+++ b/app/views/password_resets/new.html.haml
@@ -4,4 +4,4 @@
   .field
     = label_tag :email
     = text_field_tag :email, params[:email]
-  .actions= submit_tag "Reset Password"
+  .actions= submit_tag "Reset Password", :id => "forgot_submit"
