--- a/app/views/password_resets/new.html.haml
+++ b/app/views/password_resets/new.html.haml
@@ -1,5 +1,5 @@
-%p#notice= notice
-%p#alert= alert
+%p.notice= notice
+%p.alert= alert
 = form_tag password_resets_path, :method => :post do
   .field
     = label_tag :email
