--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -4,8 +4,8 @@
 			%h1 VA hospital logo
 		%div.navbar-center
 			= hidden_field_tag @user = User.find_by_id(session[:user_id])
-			%h1= "Hello, #{@user.first_name} #{@user.last_name}"
-			%h3= "You are logged in as #{@user.usertype} with FTE of #{@user.fte}"
+			%h2.title= "Hello, #{@user.first_name} #{@user.last_name}"
+			%p= "You are logged in as #{@user.usertype} with FTE of #{@user.fte}"
 		%div.collapse.navbar-collapse
 			%ul.nav.navbar-nav.navbar-right
 				%li
@@ -27,5 +27,6 @@
 					%a= link_to 'VA ER Scheduler', shifts_path
 
 	%div#page-content-wrapper
-		%div.container-fluid
-			%h1 main
+		%div.container-fluid 
+			<iframe src="https://www.google.com/calendar/embed?src=va.er.core.scheduler%40gmail.com&ctz=America/Los_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+			
