cucumber for password reset

--- a/app/views/user_mailer/password_reset.text.erb
+++ b/app/views/user_mailer/password_reset.text.erb
@@ -1,5 +1,7 @@
 Please DO NOT reply to this email.
 
+This email contains Password Reset Instructions.
+
 To reset your password, click the URL below.
 
 Your username is: <%= @user.username %>
