--- a/app/views/availabilities/index.html.haml
+++ b/app/views/availabilities/index.html.haml
@@ -1,19 +1,19 @@
 %h1 this is index.html.haml from within availabilities/shifts
 
-= month_calendar do |date|
-	= date
-
 = form_tag availabilities_path, :method => :get do
 	= week_calendar number_of_weeks: 2 do |date|
-		%div#date
-			= "#{date.to_s[5..6]}/#{date.to_s[8..9]}"
-			- @shifts.each do |shift|
-				- if shift.shiftstart.to_s[5..6].to_i == date.to_s[5..6].to_i && shift.shiftstart.to_s[8..9].to_i == date.to_s[8..9].to_i
-					%div
-						= "#{shift.shiftstart.to_s[11..15]} to #{shift.shiftend.to_s[11..15]}"
-						= radio_button_tag "#{shift.id}", 'yes', false
-						= radio_button_tag "#{shift.id}", 'maybe', true
-						= radio_button_tag "#{shift.id}", 'no', false
+		%table
+			%thead
+				%tr
+					%th= "#{date.to_s[5..6]}/#{date.to_s[8..9]}"
+				%tbody
+					- @shifts.each do |shift|
+						- if shift.shiftstart.to_s[5..6].to_i == date.to_s[5..6].to_i && shift.shiftstart.to_s[8..9].to_i == date.to_s[8..9].to_i
+							%tr
+								%td= "#{shift.shiftstart.to_s[11..15]} to #{shift.shiftend.to_s[11..15]}"
+								%td= radio_button_tag "#{shift.id}", 'yes', false
+								%td= radio_button_tag "#{shift.id}", 'maybe', true
+								%td= radio_button_tag "#{shift.id}", 'no', false
 		%br
 	= submit_tag 'Update'
 
