--- a/app/views/shifts/show.html.haml
+++ b/app/views/shifts/show.html.haml
@@ -7,6 +7,14 @@
 	%li
 		End Time:
 		= @shift.shiftend
+
+	%li
+		Available People:
+		= @shift.users
+
+	%li
+		Possible Users:
+		= @shift.possible_users
 	
 	%li
 		Shift Assigned To:
