--- a/app/views/shifts/edit.html.haml
+++ b/app/views/shifts/edit.html.haml
@@ -7,6 +7,12 @@
 
   = label :shift, :shiftend, 'End'
   = datetime_select :shift, :shiftend
+  %br
+ 
+  = label :shift, :owner, 'Assign Person'
+  = select("shift", "owner", [User.find(@shift.users).first_name])
 
+  
+  %br
   = submit_tag 'Update Shift'
   = link_to 'Back to all shifts', shifts_path
