--- a/app/views/fte_multiplier/index.html.haml
+++ b/app/views/fte_multiplier/index.html.haml
@@ -11,6 +11,7 @@
 		%thead
 			%tr
 				%th Doctor
+				%th Account Type
 				%th Current FTE
 				%th Current Multiplier
 				%th New Multiplier
@@ -18,6 +19,7 @@
 				-@users.each do |user|
 					%tr
 						%td= "#{user.last_name}, #{user.first_name}"
+						%td= user.usertype
 						%td= user.fte
 						%td= user.fte_multiplier
 						%td= number_field_tag "#{user.id}", user.fte_multiplier, step: 0.1, size: 5
