be able to assign doctor to shift

--- a/app/views/availabilities/index.html.haml
+++ b/app/views/availabilities/index.html.haml
@@ -1,6 +1,7 @@
 %h1 this is index.html.haml from within availabilities/shifts
 
 %h1 actual prefs form
+%td= link_to 'Back to Home Page', home_index_path()
 
 :css
 	tr {
