--- a/app/views/shifts/index.html.haml
+++ b/app/views/shifts/index.html.haml
@@ -2,6 +2,8 @@
 
 %h2 these are all the shifts currently in the shifts table
 
+%td= link_to 'Back to Home Page', home_index_path()
+
 %div#wrapper
 	%div#page-content-wrapper
 		%div.container-fluid 
