--- a/app/views/shifts/edit.html.haml
+++ b/app/views/shifts/edit.html.haml
@@ -10,7 +10,7 @@
   %br
  
   = label :shift, :owner, 'Assign Person'
-  = select("shift", "owner", [User.find(@shift.users).first_name])
+  = select("shift", "owner", (@shift.users + @shift.possible_users).split(" ").collect {|num| [User.find(num.to_i).first_name]}, {include_blank: true})
 
   
   %br
