--- a/app/views/fte_multiplier/index.html.haml
+++ b/app/views/fte_multiplier/index.html.haml
@@ -22,6 +22,6 @@
 						%td= user.usertype
 						%td= user.fte
 						%td= user.fte_multiplier
-						%td= number_field_tag "#{user.id}", user.fte_multiplier, step: 0.1, size: 5
+						%td= number_field_tag "#{user.id}", user.fte_multiplier, step: 0.1
 
 	= submit_tag 'Update'
