--- a/app/views/shifts/edit.html.haml
+++ b/app/views/shifts/edit.html.haml
@@ -8,9 +8,13 @@
   = label :shift, :shiftend, 'End'
   = datetime_select :shift, :shiftend
   %br
- 
-  = label :shift, :owner, 'Assign Person'
-  = select("shift", "owner", "#{@shift.users}#{@shift.possible_users}".split(" ").collect {|num| [User.find(num.to_i).first_name]}, {include_blank: true})
+
+  - if @shift.users != " " || @shift.possible_users != " " 
+    = label :shift, :owner, 'Assign Person'
+    = select("shift", "owner", "#{@shift.users}#{@shift.possible_users}".split(" ").collect {|num| [User.find(num.to_i).first_name]}, {include_blank: true})
+  - else
+    No Available Doctors to Assign for This Shift
+
 
   
   %br
