changes to remove *** from hours allocated

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -30,5 +30,5 @@
 
 	%div#page-content-wrapper
 		%div.container-fluid 
-			<iframe src="https://www.google.com/calendar/embed?src=va.er.core.scheduler%40gmail.com&ctz=America/Los_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+			<iframe src="https://www.google.com/calendar/embed?src=va.er.core.scheduler%40gmail.com&ctz=America/San_Francisco" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 			
