--- a/app/views/shifts/edit.html.haml
+++ b/app/views/shifts/edit.html.haml
@@ -11,7 +11,7 @@
 
   - if @shift.users != " " || @shift.possible_users != " " 
     = label :shift, :owner, 'Assign Person'
-    = select("shift", "owner", "#{@shift.users}#{@shift.possible_users}".split(" ").collect {|num| [User.find(num.to_i).first_name]}, {include_blank: true})
+    = select("shift", "owner", "#{@shift.users}#{@shift.possible_users}".split(" ").collect {|num| [User.find(num.to_i).first_name]}, {include_blank: false})
   - else
     No Available Doctors to Assign for This Shift
     
