adding recurring availabilities feature

--- a/app/views/availabilities/index.html.haml
+++ b/app/views/availabilities/index.html.haml
@@ -30,6 +30,8 @@
 		%br
 	= submit_tag 'Update'
 
+	= link_to 'Set Availabilities to Previous Pay Period', new_availability_path
+
 %h2 Your Availabilities
 
 = week_calendar number_of_weeks: 2 do |date|
